--- a/main.css
+++ b/main.css
@@ -50,14 +50,19 @@ html, body {
 .logo {
   display: inline-block;
   font-size: 22px;
-  margin-top: 10px;
-  padding-left: 10px;
+  margin-top: 20px;
+ 
+}
+
+.logo img {
+  width: 30%;
+  margin-top: 20px;
 }
 
 .navbar-toggle {
   position: absolute;
-  top: 10px;
-  right: 20px;
+  top: 20px;
+  right: 10px;
   cursor: pointer;
   color: rgba(255, 255, 255, 0.8);
   font-size: 24px;
@@ -145,6 +150,10 @@ html, body {
     padding-left: 35%;
   }
 
+  .navbar {
+    width: 90%;
+  }
+
   
 }
 
@@ -192,7 +201,7 @@ html, body {
   .hero-text {
     text-align: start;
     width: 90%;
-    top: calc(5% + 60px);
+    top: calc(5% + 75px);
   }
   
   .hero-text h1 {
