--- a/main.css
+++ b/main.css
@@ -21,7 +21,7 @@ p::selection {
   font-size: 18px;
   background-image: transparent;
   z-index: 2;
-  position: absolute;
+  position: relative;
   width: 95%;
   max-width: 1100px;
   margin-left: auto;
@@ -166,8 +166,8 @@ p::selection {
 
 .hero-text {
   text-align: start;
-  position: absolute;
-  top: calc(10% + 125px);
+  position: relative;
+  margin-top: calc(5% + 15px);
   margin-left: auto;
   margin-right: auto;
   left: 0;
@@ -272,7 +272,7 @@ p::selection {
 .grid-container {
   width: 100%;
   max-width: 100%;
-  margin-top: 0px;
+  margin-top: -100px;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr 1fr 1fr;
@@ -282,7 +282,7 @@ p::selection {
   max-height: 835px;
   transform: skewY(-12deg);
   transform-origin: 0;
-  
+  position: absolute;
 }
 
 
@@ -327,7 +327,8 @@ p::selection {
 @media screen and (min-width: 768px) and (max-width: 1200px) {
 
   .grid-container {
-    height: 90vh;
+    height: 60vh;
+    min-height: 500px;
   }
 }
 
@@ -339,7 +340,7 @@ p::selection {
   .grid-container {
     width: 100%;
     height: 90vh;
-    max-height: 550px;
+    max-height: 575px;
   }
 
 
@@ -377,6 +378,9 @@ p::selection {
 
   .areaSix { 
     grid-area: areaSix; 
+    background: #a6ffcb;
+    height: 40px;
+    margin-left: 20%;
   }
 
   .flatwrap {
@@ -394,14 +398,15 @@ p::selection {
 .flatwrap {
   max-width: 100%;
   position: relative;
-  margin-top: calc(-10% - 680px);
+  margin-top: -500px;
+ 
 }
 
 @media screen and (min-width: 768px) and (max-width: 1200px) {
 
   .flatwrap {
-    margin-top: -750px;
-    margin-left: 10%;
+    margin-top: -600px;
+    margin-left: 15%;
   }
 }
 
@@ -527,7 +532,7 @@ p::selection {
   .about-img {
     margin-top: -100px;
     margin-right: calc(-50% - 350px);
-
+   
   }
 
   .about-title {
@@ -554,7 +559,7 @@ p::selection {
   }
 
   .about-title {
-    margin-top: 20px;
+    margin-top: 25%;
     width: 90vw;
     display: flex;
     flex-direction: column-reverse;
@@ -569,7 +574,7 @@ p::selection {
   .about-title i {
     font-size: 50px;
     animation: pulse 3s infinite linear;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
     
   }
   
