--- a/main.css
+++ b/main.css
@@ -271,7 +271,7 @@ p::selection {
 
 .grid-container {
   width: 100%;
-  max-width: 100%;
+  max-width: 1900px;
   margin-top: -100px;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
@@ -279,7 +279,7 @@ p::selection {
   grid-template-areas: "areaOne areaTwo areaTwo areaThree . ." ". . . . . ." ". . . . areaFive areaFive" "areaFour areaFour . . areaSix areaSix";
   background: linear-gradient(150deg,#53f 15%,#05d5ff 70%,#a6ffcb 94%);
   height: 120vh;
-  max-height: 700px;
+  max-height: 800px;
   transform: skewY(-12deg);
   transform-origin: 0;
   position: absolute;
