--- a/main.css
+++ b/main.css
@@ -330,17 +330,18 @@ p::selection {
 
   .grid-container {
     height: 90vh;
+    max-height: 700px;
   }
 }
 
 
 
-@media (min-width: 320px) and (max-width: 768px) {
+@media (min-width: 320px) and (max-width: 825px) {
 
 
   .grid-container {
     width: 100%;
-    height: 90vh;
+    height: 135vh;
     max-height: 575px;
   }
 
@@ -531,13 +532,17 @@ p::selection {
 @media screen and (min-width: 768px) and (max-width: 1200px) {
 
   .about-img {
-    margin-top: -130px;
+  
     margin-right: calc(-50% - 350px);
    
   }
 
   .about-title {
-    margin-top: %;
+    margin-top: 100px;
+  }
+
+  .about-section{
+    margin-bottom: 130px;
   }
 }
 
