--- a/main.css
+++ b/main.css
@@ -183,7 +183,7 @@ p::selection {
   color: #f3f6f7;
   font-size: 40px;
   font-weight: 600;
-  
+  margin-bottom: 0;
 }
 
 .hero-text h2 {
@@ -193,14 +193,15 @@ p::selection {
   font-weight: 400;
   color: #d9fcff;
   line-height: 1.75;
-  margin-top: 10px;
+
+  
 }
 
 /*/////////////////////////////////////////////////
 /* Media to center hero text on smaller screen */
 /*////////////////////////////////////////////////*/
 
-@media (min-width: 320px) and (max-width: 768px) {
+@media (min-width: 320px) and (max-width: 823px) {
 
 
   
@@ -341,8 +342,8 @@ p::selection {
 
   .grid-container {
     width: 100%;
-    height: 135vh;
-    max-height: 575px;
+    height: 140vh;
+    max-height: 600px;
   }
 
 
@@ -532,19 +533,29 @@ p::selection {
 @media screen and (min-width: 768px) and (max-width: 1200px) {
 
   .about-img {
-  
     margin-right: calc(-50% - 350px);
    
   }
 
-  .about-title {
-    margin-top: 100px;
-  }
+ .about-title {
+    padding-top: 80px;
+   border: 2px solid red;
+ }
 
   .about-section{
     margin-bottom: 130px;
+    
   }
 }
+
+@media (min-width: 790px) and (max-width: 825px) {
+
+  .about-title {
+    margin-top: 150px;
+  }
+
+}
+
 
 @media screen and (max-width: 788px) {
 
@@ -565,7 +576,7 @@ p::selection {
   }
 
   .about-title {
-    margin-top: 25%;
+    margin-top: 100px;
     width: 90vw;
     display: flex;
     flex-direction: column-reverse;
