--- a/main.css
+++ b/main.css
@@ -169,7 +169,7 @@ p::selection {
 .hero-text {
   text-align: start;
   position: relative;
-  margin-top: calc(5% + 15px);
+  margin-top: calc(5% + 35px);
   margin-left: auto;
   margin-right: auto;
   left: 0;
@@ -337,13 +337,13 @@ p::selection {
 
 
 
-@media (min-width: 320px) and (max-width: 825px) {
+@media (min-width: 300px) and (max-width: 825px) {
 
 
   .grid-container {
     width: 100%;
     height: 140vh;
-    max-height: 600px;
+    max-height: 625px;
   }
 
 
@@ -413,6 +413,7 @@ p::selection {
   }
 }
 
+/*///////////////////////////*/
 
 .flat {
   transform: rotate(-12deg);
@@ -530,7 +531,15 @@ p::selection {
 /* Media for About Section */
 /* ///////////////////////////// */
 
-@media screen and (min-width: 768px) and (max-width: 1200px) {
+@media screen and (max-width: 771px) {
+
+  .about-title {
+    padding-top: 20%;
+    
+  }
+}
+
+@media screen and (min-width: 772px) and (max-width: 1200px) {
 
   .about-img {
     margin-right: calc(-50% - 350px);
@@ -548,7 +557,7 @@ p::selection {
   }
 }
 
-@media (min-width: 790px) and (max-width: 825px) {
+@media (min-width: 788px) and (max-width: 825px) {
 
   .about-title {
     margin-top: 150px;
@@ -585,7 +594,7 @@ p::selection {
     color: #24b47e;
     text-transform: uppercase;
     font-size: 16px;
-    
+    margin-top: 25px;
   }
   
   .about-title i {
