--- a/main.css
+++ b/main.css
@@ -208,7 +208,8 @@ p::selection {
   .hero-text {
     text-align: start;
     width: 90%;
-    top: calc(5% + 55px);
+    margin-top: 10%;
+   
   }
   
   .hero-text h1 {
