--- a/main.css
+++ b/main.css
@@ -30,6 +30,7 @@ p::selection {
   margin-right: auto;
   left: 0;
   right: 0;
+  
 }
 
 .main-nav {
@@ -135,14 +136,20 @@ p::selection {
     background-color:#fff;
     padding-top: 10px;
     padding-bottom: 10px;
-    width: 90%;
-    margin-left: auto;
-    margin-right: auto;
+    width: 100%;
+    max-width: 500px;
     margin-top: 15px;
     border-radius: 5px;
     box-shadow: 0px 5px 15px -4px rgb(59, 16, 107);
+    position: absolute;
+    left: 0;
+    right: 0;
+    margin-left: auto;
+    margin-right: auto;
     
   }
+
+ 
 
   #js-menu li a {
    color: #8898AA;
@@ -153,7 +160,7 @@ p::selection {
   #js-menu li {
     padding-top: 10px;
     text-align: justify;
-    padding-left: 35%;
+    text-indent: 35%;
   }
 
   .navbar {
@@ -302,6 +309,7 @@ p::selection {
   transform: skewY(-12deg);
   transform-origin: 0;
   position: absolute;
+  
 }
 
 
