safari block test for js nav li

--- a/main.css
+++ b/main.css
@@ -161,6 +161,7 @@ p::selection {
   }
 
   #js-menu li {
+    dislplay: block;
     padding-top: 10px;
     text-align: justify;
     text-indent: 35%;
