--- a/main.css
+++ b/main.css
@@ -154,7 +154,7 @@ p::selection {
  
 
   #js-menu li a {
-    display: block;
+    display:inline-block;
    color: #8898AA;
    font-weight:600;
     padding-left: 10px;
