--- a/main.css
+++ b/main.css
@@ -154,7 +154,6 @@ p::selection {
  
 
   #js-menu li a {
-    display:inline-block;
    color: #8898AA;
    font-weight:600;
     padding-left: 10px;
@@ -164,7 +163,7 @@ p::selection {
     display: block;
     padding-top: 10px;
     text-align: justify;
-    text-indent: 35%;
+    margin-left: 35%;
   }
 
   .navbar {
