--- a/main.css
+++ b/main.css
@@ -410,7 +410,7 @@ p::selection {
     grid-area: areaSix; 
     background: #a6ffcb;
     height: 40px;
-    margin-left: 20%;
+    margin-left: 20px;
   }
 
   .flatwrap {
