grid areaSix test 3

--- a/main.css
+++ b/main.css
@@ -410,8 +410,8 @@ p::selection {
     grid-area: areaSix; 
     background: #a6ffcb;
     height: 40px;
-    width: 60%;
-    margin-left: 20%;
+    width: 70%;
+    margin-left: auto;
   }
 
   .flatwrap {
