grid areaSix test 4

--- a/main.css
+++ b/main.css
@@ -410,7 +410,7 @@ p::selection {
     grid-area: areaSix; 
     background: #a6ffcb;
     height: 40px;
-    width: 70%;
+    width: 120px;
     margin-left: auto;
   }
 
