--- a/main.css
+++ b/main.css
@@ -400,7 +400,7 @@ p::selection {
     grid-area: areaFive; 
     background: #25ddf5;
     height: 40px;
-    margin-top: 400px;
+    margin-top: 450px;
     width: 80px;
     margin-left: auto;
    
@@ -411,6 +411,7 @@ p::selection {
     background: #a6ffcb;
     height: 40px;
     width: 120px;
+    max-width: 100%;
     margin-left: auto;
   }
 
