--- a/main.css
+++ b/main.css
@@ -1602,7 +1602,9 @@ footer button {
   padding-bottom: 10px;
 }
 
-.modal-body {padding: 2px 16px;}
+.modal-body {
+  padding: 2px 16px;
+}
 
 .modal-footer {
   padding: 2px 16px;
