--- a/main.css
+++ b/main.css
@@ -610,7 +610,7 @@ margin-top: 10px;
     display: flex;
     justify-content: center;
     transform: rotate(-12deg);
-    margin-bottom: -75px;
+    bottom: -75px;
     margin-top: 0;
     padding: 0;
   }
@@ -636,6 +636,7 @@ margin-top: 10px;
     text-transform: uppercase;
     font-size: 16px;
     margin-top: 25px;
+    border: 2px solid red;
   }
   
   .about-title i {
@@ -795,7 +796,6 @@ margin-top: 10px;
   .what {
     margin-bottom: 3%;
     top: 0;
-    border: 2px solid;
   }
 
 
