--- a/main.css
+++ b/main.css
@@ -618,10 +618,12 @@ margin-top: 10px;
    width: 650px;
    margin-left: 10%;
    padding: 0;
+   border: 2px solid;
   }
 
   .about-section {
     margin-bottom: -30px;
+    border: 2px solid red;
   }
 
   .about-title {
@@ -685,7 +687,7 @@ margin-top: 10px;
 
 .what {
   position: relative;
-  padding-top: 50px;
+  padding-top: 60px;
   padding-bottom: 40px;
   
 }
@@ -793,10 +795,11 @@ margin-top: 10px;
 
   .what::before {
     top: -75px;
+    border: 2px solid red;
   }
 
   .what {
-    margin-bottom: 80px;
+    margin-bottom: 70px;
     padding: 0;
   }
 
