--- a/main.css
+++ b/main.css
@@ -612,6 +612,7 @@ margin-top: 10px;
     transform: rotate(-12deg);
     margin-top: 0;
     padding: 0;
+    margin-bottom: -75px;
   }
 
   .mobile-section img {
