--- a/main.css
+++ b/main.css
@@ -608,19 +608,20 @@ margin-top: 10px;
   .mobile-section {
     position: relative;
     display: block;
-    width: 650px;
-  margin: 0 auto;
     transform: rotate(-12deg);
     margin-top: 0;
     padding: 0;
-    
+    border: 2px solid;
   }
 
   .mobile-section img {
-    width: 650px;
-    margin-left: -10%;
-    padding: 0;
-    margin-bottom: -75px;
+
+   width: 650px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: -55px;
+    border: 2px solid red;
+    
   }
 
   .about-section {
