ios mobile test 12

--- a/main.css
+++ b/main.css
@@ -614,9 +614,9 @@ margin-top: 10px;
   }
 
   .mobile-section img {
-    margin-left: -15%;
+    margin-left: -18%;
     margin-right: auto;
-    margin-bottom: -15%;
+    margin-bottom: -70px;
     width: 150vw;
     max-width: 900px;
     
