--- a/main.css
+++ b/main.css
@@ -1357,12 +1357,13 @@ float: right;
 .contact-info {
   height: 200px;
   width: 100%;
-
+ 
 }
 
 .contact-info img {
   width: 30%;
   max-width: 100px;
+  min-width: 50px;
   margin-left: 5px;
   margin-right: auto;
   overflow: hidden;
