--- a/main.css
+++ b/main.css
@@ -254,7 +254,7 @@ margin-top: 10px;
 .hero-button {
   color: #ffffff;
   text-transform: uppercase;
-  background-color: #3ecf83;
+  background-color: #3fcf84;
   padding: 10px 15px;
   border-style: none;
   border-radius: 5px;
