update form border

--- a/css/media.css
+++ b/css/media.css
@@ -520,7 +520,7 @@ SKills & Tools Media Queries
   
   input {
     border: none;
-    border-bottom: 1px solid #f2f2f2;
+    border-bottom: 2px solid #010101;
   }
   
   .contact-message {
