--- a/css/main.css
+++ b/css/main.css
@@ -642,7 +642,7 @@ top: 250px;
 -webkit-transform: skewY(-12deg);
 transform: skewY(-12deg);
 background: #242629;
-
+border-top: 3px solid #010101;
 }
 
 
@@ -797,7 +797,7 @@ font-size: 30px;
   float: right;
   position: relative;
   margin-top: -140px;
-  margin-right: 25%;
+  margin-right: 20%;
 }
 
 
